# DetectBase

./: .claudeignore  .env  .gitignore  CLAUDE.md  Dockerfile.analysis  Dockerfile.build  EngineSettings.json  NetworkSettings.json  OPERATIONS.md  README.md  detectbase.sh  docker-compose.yml
code/: CMakeLists.txt  ProgramConfig.h.in  README.md
code/.tool/: BuildScript.sh
code/AbnormalActions/: CMakeLists.txt
code/AbnormalActions/include/: AbnormalActionChecker.h  GeometricLogic.h  HistoryChecker.h  MgenSchedule.h  ScheduleTypes.h
code/AbnormalActions/src/: AbnormalActionChecker.cpp  GeometricLogic.cpp  MgenSchedule.cpp
code/BasicLibs/: CMakeLists.txt
code/BasicLibs/core/logger/: CorrelationContext.cpp  CorrelationContext.h  MgenLogger.cpp  MgenLogger.h  MgenLoggerMacro.cpp  MgenLoggerMacro.h
code/BasicLibs/core/metrics/: MetricsRegistry.cpp  MetricsRegistry.h
code/BasicLibs/core/parser/json/: json.hpp  json_impl.h
code/BasicLibs/core/parser/xml/: tiny_str.cpp  tiny_str.h  tiny_xml.cpp  tiny_xml.h  tiny_xml_error.cpp  tiny_xml_parser.cpp
code/BasicLibs/core/structure/: ReplyDispatcher.h  ReplyDispatcherWithCleaner.h  SafeQueue.h  SafeThread.h
code/BasicLibs/core/types/: AbnormalEventTypes.h  ClassChecker.h  DeviceCluster.cpp  DeviceCluster.h  EngineStreamTypes.cpp  EngineStreamTypes.h  InferObject.cpp  InferObject.h  InterProtocolTypes.h  MgenFileSystem.h  MgenTypes.h  ServiceStreamTypes.h
code/BasicLibs/profile/: EngineProfile.cpp  EngineProfile.h  EngineProfileParser.cpp  EngineProfileParser.h  NetworkProfileParser.cpp  NetworkProfileParser.h  ServiceBlockProfile.cpp  ServiceBlockProfile.h  ServiceProfile.h  ServiceProfileBuilder.cpp  ServiceProfileBuilder.h
code/BasicLibs/utils/: UUIDGenerator.h  file_utils.cpp  file_utils.h  ip_utils.cpp  ip_utils.h  math_utils.cpp  math_utils.h  string_utils.cpp  string_utils.h
code/CMakeFinder/: FindFFmpeg.cmake  FindgRPC.cmake
code/Engine/EngineBase/: CMakeLists.txt
code/Engine/EngineBase/include/: EngineHandlerBase.h
code/Engine/EngineBase/src/: EngineHandlerBase.cpp
code/Engine/NPU/: CMakeLists.txt
code/Engine/NPU/EngineBuilder/: EngineHandlerBuilder_NPU.cpp  EngineHandlerBuilder_NPU.h
code/Engine/NPU/YoloV5_Torch_Onnx_RKNN_NPU/: YoloV5_Torch_Onnx_RKNN_NPU.cpp  YoloV5_Torch_Onnx_RKNN_NPU.h
code/Main/: CMakeLists.txt
code/Main/BASE/include/: InitMain.h
code/Main/BASE/src/: Main.cpp
code/Main/DETECTOR/include/: DETECTOR.h  RtspDetectorBlock.h  RtspDetectorUnit.h
code/Main/DETECTOR/src/: DETECTOR.cpp  RtspDetectorBlock.cpp  RtspDetectorUnit.cpp
code/Management/: CMakeLists.txt
code/Management/manager/include/: EngineLoadBalancer.h  IOStreamManager.h  NetworkManager.h  SetterBase.h  SettingData.h  SettingManager.h  SettingManagerBase.h
code/Management/manager/interface/: ISettingData.cpp  ISettingData.h  ISettingManager.cpp  ISettingManager.h
code/Management/manager/src/: EngineLoadBalancer.cpp  IOStreamManager.cpp  NetworkManager.cpp  SettingData.cpp  SettingManager.cpp
code/Management/worker/include/: ApiHandler.h  EngineClient.h  InferenceCounter.h  RtspHandler.h  SettingMonitor.h  SioHandler.h
code/Management/worker/src/: ApiHandler.cpp  EngineClient.cpp  InferenceCounter.cpp  RtspHandler.cpp  SettingMonitor.cpp  SioHandler.cpp
code/Protocol/GRPC/: CMakeLists.txt  HowToMakeProto.md
code/Protocol/GRPC/include/: GrpcEventClientBase.h  GrpcEventServerBase.h  GrpcProtoMaker.h  GrpcUnaryHandler.h
code/Protocol/GRPC/protos/: MgenProto.proto
code/Protocol/GRPC/src/: GrpcEventClientBase.cpp  GrpcEventServerBase.cpp  GrpcProtoMaker.cpp
code/Protocol/REST/: CMakeLists.txt
code/Protocol/REST/include/: rest_client.h  rest_connection.h  rest_impl.h
code/Protocol/REST/src/: rest_impl.cpp
code/Protocol/RTSP/: CMakeLists.txt
code/Protocol/RTSP/core/include/: base64.h  hqueue.h  linked_list.h  sys_buf.h  sys_inc.h  sys_log.h  util.h  word_analyse.h
code/Protocol/RTSP/core/src/: base64.cpp  hqueue.cpp  linked_list.cpp  ppstack.cpp  sys_buf.cpp  sys_log.cpp  sys_os.cpp  util.cpp
code/Protocol/RTSP/http/include/: http.h  http_cln.h  http_mjpeg_cln.h  http_parse.h  http_srv.h
code/Protocol/RTSP/http/src/: http_cln.cpp  http_mjpeg_cln.cpp  http_parse.cpp  http_srv.cpp
code/Protocol/RTSP/media/include/: alsa.h  audio_capture.h  audio_capture_linux.h  audio_decoder.h  audio_encoder.h  audio_play.h  audio_play_linux.h  file_demux.h  live_audio.h  live_video.h  lock.h  media_util.h  screen_capture.h  screen_capture_linux.h  v4l2.h  v4l2_comm.h  video_capture.h  video_capture_linux.h  video_decoder.h  video_encoder.h
code/Protocol/RTSP/media/src/: alsa.cpp  audio_capture.cpp  audio_capture_linux.cpp  audio_decoder.cpp  audio_encoder.cpp  audio_play.cpp  audio_play_linux.cpp  file_demux.cpp  live_audio.cpp  live_video.cpp  media_util.cpp  screen_capture.cpp  screen_capture_linux.cpp  v4l2.cpp  v4l2_comm.cpp  video_capture.cpp  video_capture_linux.cpp  video_decoder.cpp  video_encoder.cpp
code/Protocol/RTSP/rtp/include/: aac_rtp_rx.h  bit_vector.h  bs.h  h264.h  h264_parser.h  h264_rtp_rx.h  h264_util.h  h265.h  h265_rtp_rx.h  h265_util.h  mjpeg.h  mjpeg_rtp_rx.h  mjpeg_tables.h  mpeg4.h  mpeg4_rtp_rx.h  pcm_rtp_rx.h  rtcp.h  rtp.h  rtp_rx.h  rtp_tx.h
code/Protocol/RTSP_GST/: CMakeLists.txt
code/Protocol/RTSP_GST/include/: GstRtspClient.h  GstRtspProxyServer.h  GstRtspReceiver.h  OnvifMetadataPayloader.h
code/Protocol/RTSP_GST/src/: GstRtspClient.cpp  GstRtspProxyServer.cpp  GstRtspReceiver.cpp  OnvifMetadataPayloader.cpp
code/Protocol/SocketIO/: CMakeLists.txt
code/Protocol/SocketIO/include/: sio_client.h  sio_message.h  sio_parser.h  sio_socket.h
code/Protocol/SocketIO/src/: sio_parser.cpp
code/Tracker/: CMakeLists.txt
code/Tracker/SORT/: MgenHungarian.cpp  MgenHungarian.h  MgenKalman.cpp  MgenKalman.h  SORTTracker.cpp  SORTTracker.h
code/Tracker/TrackerBase/: TrackerTypes.h
code/VisionCommon/: CMakeLists.txt
code/VisionCommon/include/: FramePreProcessor.h  SwsContextManager.h
code/VisionCommon/src/: FramePreProcessor.cpp  SwsContextManager.cpp
(+126 files in other folders)
